--- a/index.html
+++ b/index.html
@@ -10,37 +10,37 @@
   <body>
     <ul>
       <li>
-        <a href="/html/task-1.html"
+        <a href="./html/task-1.html"
           ><button class="btn-nav" type="button">Task 1</button></a
         >
       </li>
       <li>
-        <a href="/html/task-2.html"
+        <a href="./html/task-2.html"
           ><button class="btn-nav" type="button">Task 2</button></a
         >
       </li>
       <li>
-        <a href="/html/task-3.html"
+        <a href="./html/task-3.html"
           ><button class="btn-nav" type="button">Task 3</button></a
         >
       </li>
       <li>
-        <a href="/html/task-4.html"
+        <a href="./html/task-4.html"
           ><button class="btn-nav" type="button">Task 4</button></a
         >
       </li>
       <li>
-        <a href="/html/task-5.html"
+        <a href="./html/task-5.html"
           ><button class="btn-nav" type="button">Task 5</button></a
         >
       </li>
       <li>
-        <a href="/html/task-6.html"
+        <a href="./html/task-6.html"
           ><button class="btn-nav" type="button">Task 6</button></a
         >
       </li>
       <li>
-        <a href="/html/task-7.html"
+        <a href="./html/task-7.html"
           ><button class="btn-nav" type="button">Task 7</button></a
         >
       </li>
