--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="shortcut icon" href="./image/favicon.ico" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <ul>
@@ -38,6 +37,11 @@
       <li>
         <a href="./html/task-6.html"
           ><button class="btn-nav" type="button">Task 6</button></a
+        >
+      </li>
+      <li>
+        <a href="./html/task-7.html"
+          ><button class="btn-nav" type="button">Task 7</button></a
         >
       </li>
     </ul>
