--- a/html/task-6.html
+++ b/html/task-6.html
@@ -25,6 +25,6 @@
     </style>
 
     <a href="/index.html" class="link-title">Назад</a>
-    <script src="/js/js-6.js" type="module"></script>
+    <script src="../js/js-6.js" type="module"></script>
   </body>
 </html>
