--- a/html/task-5.html
+++ b/html/task-5.html
@@ -23,7 +23,7 @@
         color: black;
       }
     </style>
-    <a href="/index.html" class="link-title">Назад</a>
+    <a href="../index.html" class="link-title">Назад</a>
     <script src="../js/js-5.js" type="module"></script>
   </body>
 </html>
