--- a/html/task-6.html
+++ b/html/task-6.html
@@ -24,7 +24,7 @@
       }
     </style>
 
-    <a href="/index.html" class="link-title">Назад</a>
+    <a href="../index.html" class="link-title">Назад</a>
     <script src="../js/js-6.js" type="module"></script>
   </body>
 </html>
