--- a/html/task-1.html
+++ b/html/task-1.html
@@ -23,7 +23,7 @@
         color: black;
       }
     </style>
-    <a href="/index.html" class="link-title">Назад</a>
+    <a href="../index.html" class="link-title">Назад</a>
     <script src="../js/js-1.js" type="module"></script>
   </body>
 </html>
